--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,12 @@
 
 .container {
   text-align: center;
+  display: grid;
+  gap: 4px;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 100px 50px 2fr 50px;
+  resize: both;
+  overflow: auto;
 }
 
 .container div {
@@ -17,6 +23,20 @@
 
 .header {
   background-color: #393f4d;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-column: 1 / 3;
+  align-items: center;
+}
+
+.logo {
+  justify-self: start;
+}
+
+.menu > ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
 }
 
 .menu ul,
@@ -24,8 +44,16 @@
   font-size: 16px;
 }
 
+li {
+  list-style: none;
+}
+
 .sidebar {
   background-color: #C50208;
+  grid-column: 1;
+  grid-row: 2 / 4;
+  display: grid;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -34,6 +62,8 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  place-content: center;
 }
 
 
@@ -42,10 +72,19 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  place-content: center;
 }
 
 .nav {
   background-color: #C50208;
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.nav > ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .nav ul li {
@@ -55,6 +94,11 @@
 
 .article {
   background-color: #bccbde;
+  grid-column: 2;
+  grid-row: 3;
+  display: grid;
+  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .article p {
@@ -70,6 +114,10 @@
   text-align: center;
 }
 
+.card {
+  height: 200px;
+}
+
 .card p {
   color: black;
   font-weight: normal;
@@ -79,10 +127,12 @@
 .card .title {
   font-size: 18px;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-area: 4/1/5/3;
 }
 
 .footer p {
